@@ -1,3 +1,9 @@
+2017-09-10  Mark Wielaard  <mark@klomp.org>
+
+	* run-ar.sh: New test.
+	* Makefile.am (TESTS): Add run-ar.sh.
+	(EXTRA_DIST): Likewise.
+
 2017-08-18  Ulf Hermann <ulf.hermann@qt.io>
 
 	* Makefile.am: Drop -rdynamic from deleted_lib_so_LDFLAGS.
